用golang重构